# mocap_vicon_client

./: CMakeLists.txt  README.md  package.xml
include/mocap_vicon_client/: DataStreamClient.h  IDataStreamClientBase.h  communicator.hpp  publisher.hpp
launch/: client.launch.py
src/mocap_vicon_client/: communicator.cpp  publisher.cpp
