<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mocap_vicon_client</name>
  <version>0.0.1</version>
  <description>ROS2 Motion Capture Vicon Client</description>
  <maintainer email="a.babgei22@imperial.ac.uk">Atar Babgei</maintainer>
  <license>GNU General Public License v3</license>
  

  <depend>mocap_msgs</depend>

  <build_depend>rclcpp</build_depend>

  <exec_depend>rclcpp</exec_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
